--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main class="container">
-        <div class="card">
+        <div class="card  hidden">
             <div class="logo"><img src="src/images/icon-star.svg" alt="icone de uma estrela"></div>
             <span></span>
             <h1 class="title">How did we do?</h1>
@@ -34,6 +34,12 @@
                 </div>
                 <button class="btn-submit" type="submit">submit</button>
             </form>
+        </div>
+        <div class="card back-side">
+            <img src="src/images/illustration-thank-you.svg" alt="">
+            <div><h2>You selected out of 5</h2></div>
+            <h1>Thank you!</h1>
+            <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
         </div>
     </main>
 </body>
