--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </div>
         <div class="card back-side">
             <img src="src/images/illustration-thank-you.svg" alt="">
-            <div><h2>You selected out of 5</h2></div>
-            <h1>Thank you!</h1>
-            <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
+            <div class="rating-selected"><h2>You selected out of 5</h2></div>
+            <h1 class="title">Thank you!</h1>
+            <p class="description">We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
         </div>
     </main>
 </body>
