classe hidden criada

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main class="container">
-        <div class="card  hidden">
+        <div class="card">
             <div class="logo"><img src="src/images/icon-star.svg" alt="icone de uma estrela"></div>
             <span></span>
             <h1 class="title">How did we do?</h1>
@@ -35,12 +35,14 @@
                 <button class="btn-submit" type="submit">submit</button>
             </form>
         </div>
-        <div class="card back-side">
+        <div class="back-side hidden">
             <img src="src/images/illustration-thank-you.svg" alt="">
-            <div class="rating-selected"><h2>You selected out of 5</h2></div>
+            <div class="rating-selected"></div>
             <h1 class="title">Thank you!</h1>
             <p class="description">We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
         </div>
     </main>
+
+    <script src="src/js/script.js"></script>
 </body>
 </html>
